more spot experiments

--- a/training/aws/SFT/no_flash/qlora_SFT.ipynb
+++ b/training/aws/SFT/no_flash/qlora_SFT.ipynb
@@ -367,95 +367,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "model_id = \"meta-llama/Llama-2-7b-hf\" # sharded weights\n",
-    "model_name = model_id.split('/')[-1]\n",
-    "ds_name = 'wiki'\n",
-    "training_input_path = f's3://{sagemaker_session_bucket}/{ds_name}'\n",
-    "\n",
-    "# define a data input dictonary with our uploaded s3 uris\n",
-    "data = {'training': training_input_path}\n",
-    "\n",
-    "time_now = f'_{time.strftime(\"%Y-%m-%d-%H-%M-%S\", time.localtime())}'\n",
-    "\n",
-    "run_name = f'{model_name}_{ds_name}_qlora'\n",
-    "run_name += time_now\n",
-    "\n",
-    "# enables spot training\n",
-    "use_spot_instances = True\n",
-    "# max time including spot start + training time\n",
-    "max_wait = 72*60*60\n",
-    "# expected training time\n",
-    "max_run = 48*60*60\n",
-    "\n",
-    "run_name = f'{model_name}_{ds_name}_qlora'\n",
-    "job_name = f'{model_name}_{ds_name}-qlora'.replace('_','-')\n",
-    "\n",
-    "if use_spot_instances:\n",
-    "    job_name += '-spot'\n",
-    "    run_name += '-spot'\n",
-    "\n",
-    "run_name += f'__{time.strftime(\"%Y-%m-%d-%H-%M-%S\", time.localtime())}'\n",
-    "\n",
-    "checkpoint_s3_uri = f's3://{sess.default_bucket()}/{job_name}_{time_now}/checkpoints'\n",
-    "    \n",
-    "max_seq_length = 4096\n",
-    "\n",
-    "if ds_name[-4:] in ['1024','2048']:\n",
-    "    max_seq_length = int(ds_name[-4:])\n",
-    "    \n",
-    "hyperparameters = {\n",
-    "    'model_id': model_id,\n",
-    "    'repo_id': f'{model_name}-{ds_name}',\n",
-    "    'dataset_path': '/opt/ml/input/data/training',\n",
-    "    'hf_token': hf_token,\n",
-    "    'wandb_token': wandb_token,\n",
-    "    'report_to_wandb': 1,\n",
-    "    'epochs': 3,\n",
-    "    'max_steps': -1,\n",
-    "    'per_device_train_batch_size': 8,\n",
-    "    'per_device_eval_batch_size': 8,\n",
-    "    'gradient_accumulation_steps': 16,\n",
-    "    'lr': 2e-5,\n",
-    "    'merge_weights': 0,\n",
-    "    'entity': 'ft-llmmm',\n",
-    "    'project_name': 'SFT_training_dm',\n",
-    "    'hub_strategy': 'every_save',\n",
-    "    'run_name': run_name,\n",
-    "    'torch_compile': 0,\n",
-    "    'gradient_checkpointing': 1,\n",
-    "    'optim': 'paged_adamw_8bit',\n",
-    "    'group_by_length': 1,\n",
-    "    'lora_r': 64\n",
-    "    #'fsdp': '\"full_shard auto_wrap\"',\n",
-    "    #'fsdp_transformer_layer_cls_to_wrap': \"LlamaDecoderLayer\",\n",
-    "    #'lora_r'\n",
-    "}\n",
-    "\n",
-    "# create the Estimator\n",
-    "huggingface_estimator = HuggingFace(\n",
-    "    entry_point          = 'run_clm.py',      # train script\n",
-    "    source_dir           = './',         # directory which includes all the files needed for training\n",
-    "    instance_type        = 'ml.g5.2xlarge',   # instances type used for the training job\n",
-    "    instance_count       = 1,                 # the number of instances used for training\n",
-    "    base_job_name        = job_name,          # the name of the training job\n",
-    "    role                 = role,              # Iam role used in training job to access AWS ressources, e.g. S3\n",
-    "    volume_size          = 300,               # the size of the EBS volume in GB\n",
-    "    transformers_version = '4.28',            # the transformers version used in the training job\n",
-    "    #transformers_version = '4.30',\n",
-    "    pytorch_version      = '2.0',             # the pytorch_version version used in the training job\n",
-    "    py_version           = 'py310',           # the python version used in the training job\n",
-    "    hyperparameters      =  hyperparameters,  # the hyperparameters passed to the training job\n",
-    "    environment          = { \"HUGGINGFACE_HUB_CACHE\": \"/tmp/.cache\" }, # set env variable to cache models in /tmp\n",
-    "    use_spot_instances = use_spot_instances,\n",
-    "    max_wait = max_wait,\n",
-    "    max_run=max_run,\n",
-    "    checkpoint_s3_uri = checkpoint_s3_uri\n",
-    ")\n",
-    "\n",
-    "# starting the train job with our uploaded datasets as input\n",
-    "huggingface_estimator.fit(data, wait=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -467,7 +379,7 @@
    "source": [
     "model_id = \"meta-llama/Llama-2-7b-hf\" # sharded weights\n",
     "model_name = model_id.split('/')[-1]\n",
-    "ds_name = 'wiki'\n",
+    "ds_name = 'eli5_wiki_1024'\n",
     "training_input_path = f's3://{sagemaker_session_bucket}/{ds_name}'\n",
     "\n",
     "# define a data input dictonary with our uploaded s3 uris\n",
@@ -494,8 +406,8 @@
     "\n",
     "run_name += f'__{time.strftime(\"%Y-%m-%d-%H-%M-%S\", time.localtime())}'\n",
     "\n",
-    "checkpoint_s3_uri = f's3://{sess.default_bucket()}/{job_name}_{time_now}/checkpoints'\n",
-    "    \n",
+    "checkpoint_s3_uri = f's3://{sess.default_bucket()}/{job_name}/checkpoints'\n",
+    "\n",
     "max_seq_length = 4096\n",
     "\n",
     "if ds_name[-4:] in ['1024','2048']:\n",
