--- a/training/aws/SFT/no_flash/qlora_SFT.ipynb
+++ b/training/aws/SFT/no_flash/qlora_SFT.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -225,7 +225,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -367,39 +367,6 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using provided s3_resource\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n",
-      "INFO:sagemaker:Creating training-job with name: Llama-2-7b-hf-eli5-wiki-1024-qlora-spot-2023-08-21-18-32-14-200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-08-21 18:35:21 Starting - Starting the training job......\n",
-      "2023-08-21 18:35:59 Starting - Insufficient capacity error from EC2 while launching instances, retrying!.............................................................................."
-     ]
-    }
-   ],
    "source": [
     "model_id = \"meta-llama/Llama-2-7b-hf\" # sharded weights\n",
     "model_name = model_id.split('/')[-1]\n",
@@ -481,10 +448,10 @@
     "    py_version           = 'py310',           # the python version used in the training job\n",
     "    hyperparameters      =  hyperparameters,  # the hyperparameters passed to the training job\n",
     "    environment          = { \"HUGGINGFACE_HUB_CACHE\": \"/tmp/.cache\" }, # set env variable to cache models in /tmp\n",
-    "    use_spot_instances = use_spot_instances,\n",
-    "    max_wait = max_wait,\n",
-    "    max_run=max_run,\n",
-    "    checkpoint_s3_uri = checkpoint_s3_uri\n",
+    "    #use_spot_instances = use_spot_instances,\n",
+    "    #max_wait = max_wait,\n",
+    "    #max_run=max_run,\n",
+    "    #checkpoint_s3_uri = checkpoint_s3_uri\n",
     ")\n",
     "\n",
     "# starting the train job with our uploaded datasets as input\n",
