added training function

--- a/training/colab/DPO_fine_tuning.ipynb
+++ b/training/colab/DPO_fine_tuning.ipynb
@@ -5,12 +5,14 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "Y_mY2ukfYJzb",
         "L5E6-KAoKTGt",
-        "sCVPMWB_LLZe"
+        "sCVPMWB_LLZe",
+        "SxLEixWQrnBE"
       ],
       "machine_shape": "hm",
       "gpuType": "V100",
-      "authorship_tag": "ABX9TyPmEWju6R/kswL+tx9ubF1C",
+      "authorship_tag": "ABX9TyM5NI9EgkYVtnN8ll868k3C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1021,7 +1023,7 @@
         "id": "2idjfG7ZI6RH",
         "outputId": "fe038424-7a70-4e29-c4c4-ebf1cf5dc167"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1053,7 +1055,7 @@
         },
         "outputId": "3727e053-0a28-4cd9-e3ac-93f3aa004cb6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,12 +1128,13 @@
         "from trl.import_utils import is_peft_available\n",
         "from trl.trainer.dpo_trainer import DPODataCollatorWithPadding, disable_dropout_in_model, pad_to_length\n",
         "\n",
-        "from huggingface_hub import login"
+        "from huggingface_hub import login\n",
+        "from random import sample"
       ],
       "metadata": {
         "id": "taUmo6IzJwAA"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1181,7 +1184,7 @@
         },
         "outputId": "ef91ad92-d323-4e83-f191-471fbe7ff727"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1308,7 +1311,7 @@
       "metadata": {
         "id": "dsgrdnhAKUIw"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1357,7 +1360,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Dataset"
+        "# Form Dataset"
       ],
       "metadata": {
         "id": "SxLEixWQrnBE"
@@ -1393,7 +1396,7 @@
         "\n",
         "    return ds\n",
         "\n",
-        "from random import sample\n",
+        "\n",
         "def choose_random_answers(example):\n",
         "    scores = example['answers.score']\n",
         "    answers = example['answers.text']\n",
@@ -1462,7 +1465,10 @@
       "source": [
         "from huggingface_hub import login\n",
         "login()\n",
-        "#wandb.login()"
+        "#wandb.login()\n",
+        "ds_RM_top_2 = datasets.load_from_disk('../data/ds_RM_top_2')\n",
+        "ds_RM_contrast = datasets.load_from_disk('../data/ds_RM_contrast')\n",
+        "ds_RM_random = datasets.load_from_disk('../data/ds_RM_random')\n"
       ],
       "metadata": {
         "id": "6Ge_0kL2FOoD"
@@ -1473,18 +1479,155 @@
     {
       "cell_type": "code",
       "source": [
-        "ds_RM_top_2 = datasets.load_from_disk('../data/ds_RM_top_2')\n",
-        "ds_RM_contrast = datasets.load_from_disk('../data/ds_RM_contrast')\n",
-        "ds_RM_random = datasets.load_from_disk('../data/ds_RM_random')\n",
+        "def DPO_training(model_id,\n",
+        "                dataset,\n",
+        "                hf_token,\n",
+        "                gradient_checkpointing=True,\n",
+        "                r=64,\n",
+        "                lora_alpha=16,\n",
+        "                lora_dropout=0.1,\n",
+        "                bias='none',\n",
+        "                task_type='CAUSAL_LM',\n",
+        "                max_prompt_length=2048,\n",
+        "                max_length=4096,\n",
+        "                epochs = 1,\n",
+        "                max_steps = -1,\n",
+        "                lr=5e-5,\n",
+        "                weight_decay=.1,\n",
+        "                per_device_train_batch_size=16,\n",
+        "                per_device_eval_batch_size=32,\n",
+        "                gradient_accumulation_steps=8,\n",
+        "                optim='adamw_torch_fused',\n",
+        "                warmup_ratio=0.03,\n",
+        "                group_by_length=True,\n",
+        "                dataloader_num_workers=2,\n",
+        "                logging_steps=20,\n",
+        "                save_total_limit=3,\n",
+        "                save_strategy='steps',\n",
+        "                save_steps =.1,\n",
+        "                eval_steps=.1,\n",
+        "                load_best_model_at_end=True,\n",
+        "                project_name='DPO_training_dm',\n",
+        "                entity='ft-llmmm',\n",
+        "                torch_compile=False,\n",
+        "                length_column_name='lengths',\n",
+        "                 repo_id = None):\n",
+        "\n",
+        "    if torch.cuda.get_device_capability()[0] == 8:\n",
+        "        bf16=True,\n",
+        "        fp16=False\n",
+        "    else:\n",
+        "        bf16=False\n",
+        "        fp16=True\n",
         "\n",
         "\n",
-        "if torch.cuda.get_device_capability()[0] == 8:\n",
-        "    bf16=True,\n",
-        "    fp16=False\n",
-        "else:\n",
-        "    bf16=False\n",
-        "    fp16=True\n",
+        "    bnb_config = BitsAndBytesConfig(\n",
+        "    load_in_4bit=True,\n",
+        "    bnb_4bit_use_double_quant=True,\n",
+        "    bnb_4bit_quant_type=\"nf4\",\n",
+        "    bnb_4bit_compute_dtype=torch.bfloat16,\n",
+        ")\n",
         "\n",
+        "    model = AutoModelForCausalLM.from_pretrained(\n",
+        "            model_id,\n",
+        "            use_cache=False\n",
+        "            if gradient_checkpointing\n",
+        "            else True,  # this is needed for gradient checkpointing\n",
+        "            device_map=\"auto\",\n",
+        "            quantization_config=bnb_config,\n",
+        "            use_auth_token=hf_token\n",
+        "        )\n",
+        "\n",
+        "    model = create_peft_model(model,\n",
+        "                            r=r,\n",
+        "                            lora_alpha=lora_alpha,\n",
+        "                            lora_dropout=lora_dropout,\n",
+        "                            bias=bias,\n",
+        "                            task_type=task_type,\n",
+        "                            gradient_checkpointing=gradient_checkpointing,\n",
+        "                            bf16=bf16)\n",
+        "\n",
+        "    model.train()\n",
+        "\n",
+        "    tokenizer = AutoTokenizer.from_pretrained(\n",
+        "            model_id,\n",
+        "        )\n",
+        "\n",
+        "    tokenizer.pad_token = tokenizer.eos_token\n",
+        "\n",
+        "    output_dir = f'./{model_id}_DPO_r_{r}_alpha_{alpha}'\n",
+        "\n",
+        "    training_args = TrainingArguments(\n",
+        "        logging_dir =output_dir+'./logs',\n",
+        "        output_dir= output_dir,\n",
+        "        per_device_train_batch_size=per_device_train_batch_size,\n",
+        "        per_device_eval_batch_size=per_device_eval_batch_size,\n",
+        "        bf16=bf16,  # Use BF16 if available\n",
+        "        fp16=fp16,\n",
+        "        learning_rate=lr,\n",
+        "        num_train_epochs=epochs,\n",
+        "        max_steps = max_steps,\n",
+        "        gradient_checkpointing=gradient_checkpointing,\n",
+        "        optim=optim,\n",
+        "        warmup_ratio=warmup_ratio,\n",
+        "        weight_decay = weight_decay,\n",
+        "        gradient_accumulation_steps=gradient_accumulation_steps,\n",
+        "        group_by_length=group_by_length,\n",
+        "        # logging strategies\n",
+        "        logging_strategy=\"steps\",\n",
+        "        logging_steps=logging_steps,\n",
+        "        save_strategy=save_strategy,\n",
+        "        evaluation_strategy = save_strategy,\n",
+        "        save_steps = save_steps,\n",
+        "        eval_steps = eval_steps,\n",
+        "    #   log_level = 'error',\n",
+        "        hub_token=hf_token,\n",
+        "        report_to='wandb',\n",
+        "        dataloader_num_workers = dataloader_num_workers,\n",
+        "        load_best_model_at_end=load_best_model_at_end,\n",
+        "        save_total_limit = save_total_limit,\n",
+        "        remove_unused_columns=False,\n",
+        "        disable_tqdm=False,\n",
+        "        torch_compile=torch_compile,\n",
+        "        length_column_name=length_column_name\n",
+        "        #max_grad_norm=0.3\n",
+        "    )\n",
+        "\n",
+        "    dpo_trainer = DPOTrainer(\n",
+        "        model,\n",
+        "        args=training_args,\n",
+        "        beta=1,\n",
+        "        train_dataset=train_dataset,\n",
+        "        eval_dataset=eval_dataset,\n",
+        "        tokenizer=tokenizer,\n",
+        "        max_prompt_length=max_prompt_length,\n",
+        "        max_length=max_length,\n",
+        "    )\n",
+        "\n",
+        "    original_performance = trainer.evaluate()\n",
+        "    run.log({'initial-performance': wandb.Table(dataframe=pd.DataFrame(original_performance, index=[\"Performance\"]))})\n",
+        "\n",
+        "    dpo_trainer.train()\n",
+        "\n",
+        "    if repo_id:\n",
+        "        eval_result = trainer.evaluate()\n",
+        "        trainer.create_model_card(model_name=repo_id)\n",
+        "        trainer.push_to_hub()\n",
+        "\n",
+        "    final_performance = trainer.evaluate()\n",
+        "    run.log({'final-performance': wandb.Table(dataframe=pd.DataFrame(final_performance, index=[\"Performance\"]))})\n",
+        "\n",
+        "    trainer.save_model(output_dir)"
+      ],
+      "metadata": {
+        "id": "6oO79LfcGUUb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "gradient_checkpointing=True\n",
         "r=64\n",
         "lora_alpha=16\n",
@@ -1553,7 +1696,8 @@
         "        #use_auth_token=hf_token\n",
         "    )\n",
         "\n",
-        "tokenizer.pad_token = tokenizer.eos_token"
+        "tokenizer.pad_token = tokenizer.eos_token\n",
+        "\n"
       ],
       "metadata": {
         "id": "ax4NmLO8gu1O"
@@ -1566,43 +1710,7 @@
       "source": [
         "output_dir = f'./SFT_wiki_no_gl_DPO/models'\n",
         "\n",
-        "training_args = TrainingArguments(\n",
-        "    logging_dir =output_dir+'./logs',\n",
-        "    output_dir= output_dir,\n",
-        "    per_device_train_batch_size=per_device_train_batch_size,\n",
-        "    per_device_eval_batch_size=per_device_eval_batch_size,\n",
-        "    bf16=bf16,  # Use BF16 if available\n",
-        "    fp16=fp16,\n",
-        "    learning_rate=lr,\n",
-        "    num_train_epochs=epochs,\n",
-        "    max_steps = max_steps,\n",
-        "    gradient_checkpointing=gradient_checkpointing,\n",
-        "    optim=optim,\n",
-        "    warmup_ratio=warmup_ratio,\n",
-        "    weight_decay = weight_decay,\n",
-        "    gradient_accumulation_steps=gradient_accumulation_steps,\n",
-        "    group_by_length=False,\n",
-        "    # logging strategies\n",
-        "    logging_strategy=\"steps\",\n",
-        "    logging_steps=logging_steps,\n",
-        "    #evaluation_strategy = evaluation_strategy,\n",
-        "    save_strategy=save_strategy,\n",
-        "    evaluation_strategy = save_strategy,\n",
-        "    save_steps = save_steps,\n",
-        "    eval_steps = eval_steps,\n",
-        "#   log_level = 'error',\n",
-        "    #hub_token=hf_token,\n",
-        "    report_to=None,\n",
-        "    #report_to=None,\n",
-        "    #dataloader_num_workers = dataloader_num_workers,\n",
-        "    load_best_model_at_end=load_best_model_at_end,\n",
-        "    save_total_limit = save_total_limit,\n",
-        "    remove_unused_columns=False,\n",
-        "    disable_tqdm=False,\n",
-        "    torch_compile=torch_compile,\n",
-        "    length_column_name=length_column_name\n",
-        "    #max_grad_norm=0.3\n",
-        ")\n",
+        "\n",
         "\n",
         "train_dataset = ds_RM_top_2['train']\n",
         "eval_dataset = ds_RM_top_2['validation']"
@@ -1610,7 +1718,7 @@
       "metadata": {
         "id": "8owHQ1NeTzee"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1622,7 +1730,7 @@
       "metadata": {
         "id": "1YtSSbt8lsyI"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1634,25 +1742,12 @@
       "metadata": {
         "id": "UJ-jmkOVl0iy"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "dpo_trainer = DPOTrainer(\n",
-        "        model,\n",
-        "        args=training_args,\n",
-        "        beta=1,\n",
-        "        train_dataset=train_dataset,\n",
-        "        eval_dataset=eval_dataset,\n",
-        "        tokenizer=tokenizer,\n",
-        "        max_prompt_length=4096,\n",
-        "        max_length=4096,\n",
-        "    )\n",
-        "\n",
-        "dpo_trainer.train()"
-      ],
+      "source": [],
       "metadata": {
         "id": "M-mQ1aN-Vhcs"
       },
